# genro-builders

./: .gitignore  CLAUDE.md  NOTICE  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
archive/: README.md
archive/docs/: advanced.md  contract.md  creating-builder-packages.md
archive/tests/: test_binding.py  test_data_builder.py  test_dependency_graph.py  test_main_store.py  test_manager.py  test_node_id.py  test_pointer.py  test_reactive_manager.py  test_reactivity_edge_cases.py  test_render_target.py
docs/: 04-builders.ipynb  conf.py  genro-builders-for-dummies.html  getting-started.md  index.md
docs/builders/: README.md  advanced.md  architecture.md  contract.md  creating-builder-packages.md  custom-builders.md  custom-renderers.md  examples.md  faq.md  html-builder.md  index.md  manager-architecture.md  markdown-builder-schema.md  markdown-builder.md  quickstart.md  reactive-data.md  svg-builder.md  validation.md  xsd-builder.md
docs/reference/: architecture.md  full-faq.md
examples/: README.md  reactive_data_example.py
examples/builders/: building_builder.py  html_page_example.py  reactive_data_example.py  table_builder.py  weather_dashboard.py
src/genro_builders/: __init__.py  app.py  binding.py  builder.py  builder_bag.py  builder_utils.py  built_bag.py  compiler.py  component_proxy.py  component_resolver.py  dependency_graph.py  expander.py  formula_resolver.py  manager.py  pointer.py  reactive_manager.py  render_target.py  renderer.py
tests/: conftest.py  helpers.py  test_abs_datapath.py  test_app.py  test_async_build.py  test_autocomplete.py  test_autonomous_builder.py  test_binding.py  test_build_e2e.py  test_builder_utils.py  test_compile_parent.py  test_compiler_base.py  test_component_main_kwargs.py  test_component_proxy.py  test_component_resolver.py  test_component_slots.py  test_data_element.py  test_data_elements.py  test_evaluate_on_node.py  test_iterate.py  test_main_store.py  test_manager.py  test_manager_hooks.py  test_manager_registry.py  test_path_resolution.py  test_pointer.py  test_pointer_formal.py  test_reactive_manager.py  test_reactivity_edge_cases.py  test_runtime_attrs.py  test_schema_builder.py  test_volume_routing.py  test_yaml_renderer.py
tests/builders/: test_expander.py
tests/test_builders/: test_annotated_validation.py  test_base_builder.py  test_build_new.py  test_component_decorator.py  test_decorators.py  test_dispatch_validation.py  test_html.py  test_markdown_builder.py  test_output.py  test_svg.py  test_utilities.py
(+173 files in other folders)
